# api_gateway/api/middleware/auth.go
@@ -69,6 +69,8 @@ func (a *JwtRoleAuth) GetRole(r *http.Request) (string, error) {
 		role = "authorized"
 	} else if claims["role"].(string) == "admin" {
 		role = "admin"
+	} else if claims["role"].(string) == "moderator" {
+		role = "moderator"
 	} else {
 		role = "unknown"
 	}
